<resources>
    <string name="app_name">Doggo Match</string>
    <string name="label_identify_breed">IDENTIFY THE BREED</string>
    <string name="label_identify_dog">IDENTIFY THE DOG</string>
    <string name="label_search_breeds">SEARCH DOG BREEDS</string>
    <string name="switch_toggle">SWITCH</string>
    <string name="label_toggle_countdown">Countdown</string>
    <string name="button_label_submit">Submit</string>
    <string name="random_dog_image_description">Displays an image of a random dog</string>
    <string name="breed_text">Breed:</string>
    <string name="next_button_label">Next</string>
    <string name="image_of_first_dog_description">Image of first dog</string>
    <string name="image_of_second_dog_description">Image of second dog</string>
    <string name="image_of_third_dog_description">Image of third dog</string>
    <string name="stop_label">Stop</string>
    <string name="enter_a_breed_hint">Enter a Breed</string>
    <string name="random_image_of_breed_description">Random image of dog breed</string>
    <string name="home_dog_image">home_dog_image</string>
    <string name="dog_splashing_image">dog_splashing_image</string>
    <string name="back_drop_of_paw">Back Drop of Paw</string>
    <string name="app_logo_description">App Logo</string>
    <string name="landscape_back_drop_image">Landscape Back-drop image</string>
    <string name="choose_breed_instruction">Choose Breed from Dropdown</string>
    <string name="choose_the_dog_instruction">Choose the Dog image that matches the Breed</string>


    <string-array name="breeds_array">
        <item>Chihuahua</item>
        <item>Afghan Hound</item>
        <item>Basset</item>
        <item>Blood Hound</item>
        <item>Australian Terrier</item>
        <item>Golden Retriever</item>
        <item>Labrador Retriever</item>
        <item>Old English Sheepdog</item>
        <item>Rottweiler</item>
        <item>Greater Swiss Mountain Dog</item>
        <item>Dingo</item>
    </string-array>
</resources>
