<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyDogActivity">

    <TextView
        android:id="@+id/breed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/breed_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/breed_name_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/breed_name_label"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/breed_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/breed_label" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="170dp"
        android:layout_height="515dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text">

        <ImageView
            android:id="@+id/first_dog_image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:contentDescription="@string/image_of_first_dog_description"
            android:paddingBottom="8dp"
            app:srcCompat="@android:color/holo_green_light" />

        <ImageView
            android:id="@+id/second_dog_image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:contentDescription="@string/image_of_second_dog_description"
            android:paddingBottom="8dp"
            app:srcCompat="@android:color/holo_orange_dark" />

        <ImageView
            android:id="@+id/third_dog_image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:contentDescription="@string/image_of_third_dog_description"
            app:srcCompat="@android:color/holo_blue_dark" />
    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/next_button_label"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breed_name_label" />
</androidx.constraintlayout.widget.ConstraintLayout>